# arras-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: analyze.py  index.py  requirements.txt
data/evals/: casos.yaml
data/kb/: codigo_civil.yaml  patrones.yaml
docs/: LAUNCH.md
docs/superpowers/plans/: 2026-07-12-sprint-2-langgraph-agent.md  2026-07-12-sprint-3-rag.md  2026-07-13-sprint-4-evals.md  2026-07-13-sprint-5-web-demo.md  2026-07-14-sprint-5-packaging.md  2026-07-14-sprint-6-mcp.md  2026-07-16-privacidad-anonimizacion.md
docs/superpowers/specs/: 2026-07-12-sprint-2-langgraph-agent-design.md  2026-07-12-sprint-3-rag-design.md  2026-07-13-sprint-4-evals-design.md  2026-07-13-sprint-5-web-demo-design.md  2026-07-14-sprint-5-packaging-design.md  2026-07-14-sprint-6-mcp-design.md  2026-07-16-privacidad-anonimizacion-design.md
scripts/: build_kb.py  generate_fixtures.py  run_evals.py  smoke_test.py
src/arras_ai/: __init__.py  __main__.py  agent.py  analyzer.py  anonimizacion.py  cli.py  config.py  mcp_server.py  models.py  pdf.py  prompts.py  riesgos.py
src/arras_ai/evals/: __init__.py  dataset.py  judge.py  metrics.py  report.py  runner.py
src/arras_ai/rag/: __init__.py  embeddings.py  ingest.py  knowledge_base.py  store.py
tests/: conftest.py  test_agent_anonimizacion.py  test_agent_unit.py  test_analyzer_unit.py  test_anonimizacion.py  test_api_analyze.py  test_cli.py  test_evals_dataset.py  test_evals_judge.py  test_evals_metrics.py  test_evals_report.py  test_evals_runner.py  test_integration.py  test_mcp_server.py  test_models.py  test_pdf.py  test_rag_embeddings.py  test_rag_knowledge_base.py  test_rag_store.py  test_riesgos.py
tests/fixtures/: README.md
web/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vercel.json
web/public/: robots.txt  sitemap.xml
web/src/components/: Analizador.astro  CookieConsent.astro
web/src/examples/: index.ts
web/src/layouts/: Legal.astro
web/src/lib/: vista.test.ts  vista.ts
web/src/pages/: aviso-legal.astro  index.astro  privacidad.astro  terminos.astro
web/src/styles/: global.css
