[project]
name = "arras-ai"
version = "0.1.0"
description = "Analyze Spanish earnest-money property contracts (contratos de arras) with LLMs, grounded in the Código Civil."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Luis Pique" }]
keywords = ["arras", "contract-analysis", "legaltech", "claude", "spain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Spanish",
]
dependencies = [
    "anthropic>=0.69",
    "pdfplumber>=0.11",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.9",
    "langgraph>=0.2",
]

[project.urls]
Homepage = "https://github.com/luispique/arras-ai"
Repository = "https://github.com/luispique/arras-ai"
Issues = "https://github.com/luispique/arras-ai/issues"

[project.scripts]
arras = "arras_ai.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "reportlab>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arras_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "reportlab.*", "generate_fixtures"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that call the real Claude API (need ANTHROPIC_API_KEY)",
]
addopts = "-ra"
