[project]
name = "arras-ai"
version = "0.1.0"
description = "Analyze Spanish earnest-money property contracts (contratos de arras) with LLMs, grounded in the Código Civil."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Luis Pique" }]
keywords = ["arras", "contract-analysis", "legaltech", "claude", "spain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Spanish",
]
dependencies = [
    "anthropic>=0.69",
    "pdfplumber>=0.11",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.9",
    "langgraph>=0.2",
    "fastembed>=0.4",
    "lancedb>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
voyage = ["voyageai>=0.2"]
mcp = ["mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/luispique/arras-ai"
Repository = "https://github.com/luispique/arras-ai"
Issues = "https://github.com/luispique/arras-ai/issues"

[project.scripts]
arras = "arras_ai.cli:app"
arras-mcp = "arras_ai.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "reportlab>=4.2",
    "fastapi>=0.117",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arras_ai"]

# Vercel deploy (web demo): the repo root is a Python package, so Vercel's Python
# runtime treats the whole repo as one app and finds several candidate entrypoints
# (src/arras_ai/__main__.py, cli.py, api/index.py). Name the one we deploy — the
# FastAPI `app` in api/index.py — so the "No python entrypoint found" build error
# is resolved. Only the standalone Python API project (root = repo root) uses this;
# the Astro frontend deploys as a separate Vercel project with Root Directory = web.
[tool.vercel]
entrypoint = "api.index:app"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "reportlab.*",
    "generate_fixtures",
    "fastembed.*",
    "lancedb.*",
    "yaml",
    "openai.*",
    "voyageai.*",
]
ignore_missing_imports = true

# numpy is only pulled in transitively (via langgraph's optional numpy support,
# lancedb, and fastembed) and its stubs use PEP 695 syntax that requires
# python_version >= 3.12 to parse, which conflicts with this project's 3.11
# target. We never import numpy directly, so skip following into it.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that call the real Claude API (need ANTHROPIC_API_KEY)",
]
addopts = "-ra"
filterwarnings = [
    "ignore:The model intfloat/multilingual-e5-large now uses mean pooling:UserWarning",
    # Starlette's TestClient warns about httpx<->httpx2; not actionable for our deps.
    "ignore:Using `httpx` with `starlette.testclient`",
]
